* 0.5.12	00.04.2006  Johannes Winkelmann
- Fix compilation on OpenBSD
- Show alias info in depends
- don't install alias file and deplist

* 0.5.11	29.05.2005  Johannes Winkelmann
- add --path to 'ls'
- initial regex support
- replace `uname -r` and `date +...` in version strings
- add 'useregex' config key and --regex command line argument
- Add --full to fsearch
- use regex in fsearch if requested
- add leading slash to fsearch result
- support both `` and $()
- support date patterns like '+%Y'
- add aliases and deplist to dist-tarball
- support multiple shell patterns in version

* 0.5.10	21.04.2005  Johannes Winkelmann
- fix bugs #3735, #3836
- implement --ignore=<port1>,<port2> feature
- fix --path for list, search
- add --path for depends
- enable logfile and depfile in default prt-get.conf


* 0.5.9         06.12.2005  Johannes Winkelmann
- add alias support
- use absolut pathes for commands (pkgmk et al)
- add -v switch to 'info' to show the readme
- fix 'keephigher' in default prt-get.conf
- add deptree to 'help'
- remove some debug test
- prettify error message when packages are not found
- change 'bash' to 'sh' in process.cpp
- use 'Pkgfile' as default file for cat and edit if no second argument given

* 0.5.8		31.10.2004  Johannes Winkelmann
- re-enable version parseing; use --prefer-higher to make prt-get use
  it
- implement shortcuts to frequentily used pkgmk/pkgadd options
- make -f do 'pkgadd -f'
- add new versioncomparator class
- implement 'alpha' < 'beta' < 'gamma' < 'delta'

* 0.5.7         16.07.2004  Johannes Winkelmann
- add the --install-root argument to allow installation to a different root
- add the --rargs switch to pass options to pkgmk in "prt-get remove"
- add 'removecommand' configuration key
- add 'runscriptcommand' configuration key
- improve config parsing: options can now be in front of command

* 0.5.6		06.01.2004  Johannes Winkelmann
- add four new command line arguments: