@@ -2,6 +2,7 @@
 - Fix compilation on OpenBSD
 - Show alias info in depends
 - don't install alias file and deplist
+- unlock ports on remove
 
 * 0.5.11	29.05.2005  Johannes Winkelmann
 - add --path to 'ls'
